examples/test/testpolicy6256.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy6256
  namespace: namespace189
spec:
  podSelector:
    matchLabels:
      key2: value22
      key24: value38
      key23: value34
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key26: value21
          key25: value15
          key1: value14
      podSelector:
        matchLabels:
          key21: value0
          key42: value34
          key38: value35
